--- a/views/xmly.ejs
+++ b/views/xmly.ejs
@@ -91,7 +91,7 @@
                 <td>/xmly/login</td>
                 <td>post</td>
                 <td>
-                    <p>phone - 手机，默认：13647008979</p>
+                    <p>phone - 15829269880</p>
                     <p>password - 密码，默认：angular10</p>
                 </td>
             </tr>
